--- a/amplify-serverless-appsync-course-main/frontend/book-store/package.json
+++ b/amplify-serverless-appsync-course-main/frontend/book-store/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^9.0.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "react-scripts start",
